--- a/pandas/_libs/algos_rank_helper.pxi.in
+++ b/pandas/_libs/algos_rank_helper.pxi.in
@@ -121,11 +121,11 @@ def rank_1d_{{dtype}}(object in_arr, ties_method='average', ascending=True,
         _values = np.asarray(list(zip(order[0], order[1])), dtype=_dt)
         _as = np.argsort(_values, kind='mergesort', order=('mask', 'values'))
     {{else}}
-    if tiebreak == TiebreakEnumType.TIEBREAK_FIRST:
+    if tiebreak == TIEBREAK_FIRST:
         # need to use a stable sort here
         _as = np.lexsort(keys=order)
         if not ascending:
-            tiebreak = TiebreakEnumType.TIEBREAK_FIRST_DESCENDING
+            tiebreak = TIEBREAK_FIRST_DESCENDING
     else:
         _as = np.lexsort(keys=order)
     {{endif}}
@@ -154,21 +154,21 @@ def rank_1d_{{dtype}}(object in_arr, ties_method='average', ascending=True,
         if (i == n - 1 or
                 are_diff(util.get_value_at(sorted_data, i + 1), val) or
                 i == non_na_idx - 1):
-            if tiebreak == TiebreakEnumType.TIEBREAK_AVERAGE:
+            if tiebreak == TIEBREAK_AVERAGE:
                 for j in range(i - dups + 1, i + 1):
                     ranks[argsorted[j]] = sum_ranks / dups
-            elif tiebreak == TiebreakEnumType.TIEBREAK_MIN:
+            elif tiebreak == TIEBREAK_MIN:
                 for j in range(i - dups + 1, i + 1):
                     ranks[argsorted[j]] = i - dups + 2
-            elif tiebreak == TiebreakEnumType.TIEBREAK_MAX:
+            elif tiebreak == TIEBREAK_MAX:
                 for j in range(i - dups + 1, i + 1):
                     ranks[argsorted[j]] = i + 1
-            elif tiebreak == TiebreakEnumType.TIEBREAK_FIRST:
+            elif tiebreak == TIEBREAK_FIRST:
                 raise ValueError('first not supported for non-numeric data')
-            elif tiebreak == TiebreakEnumType.TIEBREAK_FIRST_DESCENDING:
+            elif tiebreak == TIEBREAK_FIRST_DESCENDING:
                 for j in range(i - dups + 1, i + 1):
                     ranks[argsorted[j]] = 2 * i - j - dups + 2
-            elif tiebreak == TiebreakEnumType.TIEBREAK_DENSE:
+            elif tiebreak == TIEBREAK_DENSE:
                 total_tie_count += 1
                 for j in range(i - dups + 1, i + 1):
                     ranks[argsorted[j]] = total_tie_count
@@ -191,22 +191,22 @@ def rank_1d_{{dtype}}(object in_arr, ties_method='average', ascending=True,
 
             if (i == n - 1 or sorted_data[i + 1] != val or
                 i == non_na_idx - 1):
-                if tiebreak == TiebreakEnumType.TIEBREAK_AVERAGE:
+                if tiebreak == TIEBREAK_AVERAGE:
                     for j in range(i - dups + 1, i + 1):
                         ranks[argsorted[j]] = sum_ranks / dups
-                elif tiebreak == TiebreakEnumType.TIEBREAK_MIN:
+                elif tiebreak == TIEBREAK_MIN:
                     for j in range(i - dups + 1, i + 1):
                         ranks[argsorted[j]] = i - dups + 2
-                elif tiebreak == TiebreakEnumType.TIEBREAK_MAX:
+                elif tiebreak == TIEBREAK_MAX:
                     for j in range(i - dups + 1, i + 1):
                         ranks[argsorted[j]] = i + 1
-                elif tiebreak == TiebreakEnumType.TIEBREAK_FIRST:
+                elif tiebreak == TIEBREAK_FIRST:
                     for j in range(i - dups + 1, i + 1):
                         ranks[argsorted[j]] = j + 1
-                elif tiebreak == TiebreakEnumType.TIEBREAK_FIRST_DESCENDING:
+                elif tiebreak == TIEBREAK_FIRST_DESCENDING:
                     for j in range(i - dups + 1, i + 1):
                         ranks[argsorted[j]] = 2 * i - j - dups + 2
-                elif tiebreak == TiebreakEnumType.TIEBREAK_DENSE:
+                elif tiebreak == TIEBREAK_DENSE:
                     total_tie_count += 1
                     for j in range(i - dups + 1, i + 1):
                         ranks[argsorted[j]] = total_tie_count
@@ -300,11 +300,11 @@ def rank_2d_{{dtype}}(object in_arr, axis=0, ties_method='average',
         else:
             return ranks
     {{else}}
-    if tiebreak == TiebreakEnumType.TIEBREAK_FIRST:
+    if tiebreak == TIEBREAK_FIRST:
         # need to use a stable sort here
         _as = values.argsort(axis=1, kind='mergesort')
         if not ascending:
-            tiebreak = TiebreakEnumType.TIEBREAK_FIRST_DESCENDING
+            tiebreak = TIEBREAK_FIRST_DESCENDING
     else:
         _as = values.argsort(1)
     {{endif}}
@@ -359,16 +359,16 @@ def rank_2d_{{dtype}}(object in_arr, axis=0, ties_method='average',
             {{else}}
             if j == k - 1 or values[i, j + 1] != val:
             {{endif}}
-                if tiebreak == TiebreakEnumType.TIEBREAK_AVERAGE:
+                if tiebreak == TIEBREAK_AVERAGE:
                     for z in range(j - dups + 1, j + 1):
                         ranks[i, argsorted[i, z]] = sum_ranks / dups
-                elif tiebreak == TiebreakEnumType.TIEBREAK_MIN:
+                elif tiebreak == TIEBREAK_MIN:
                     for z in range(j - dups + 1, j + 1):
                         ranks[i, argsorted[i, z]] = j - dups + 2
-                elif tiebreak == TiebreakEnumType.TIEBREAK_MAX:
+                elif tiebreak == TIEBREAK_MAX:
                     for z in range(j - dups + 1, j + 1):
                         ranks[i, argsorted[i, z]] = j + 1
-                elif tiebreak == TiebreakEnumType.TIEBREAK_FIRST:
+                elif tiebreak == TIEBREAK_FIRST:
                     {{if dtype == 'object'}}
                     raise ValueError('first not supported '
                                      'for non-numeric data')
@@ -376,10 +376,10 @@ def rank_2d_{{dtype}}(object in_arr, axis=0, ties_method='average',
                     for z in range(j - dups + 1, j + 1):
                         ranks[i, argsorted[i, z]] = z + 1
                     {{endif}}
-                elif tiebreak == TiebreakEnumType.TIEBREAK_FIRST_DESCENDING:
+                elif tiebreak == TIEBREAK_FIRST_DESCENDING:
                     for z in range(j - dups + 1, j + 1):
                         ranks[i, argsorted[i, z]] = 2 * j - z - dups + 2
-                elif tiebreak == TiebreakEnumType.TIEBREAK_DENSE:
+                elif tiebreak == TIEBREAK_DENSE:
                     total_tie_count += 1
                     for z in range(j - dups + 1, j + 1):
                         ranks[i, argsorted[i, z]] = total_tie_count
