--- a/doc/source/index.rst.template
+++ b/doc/source/index.rst.template
@@ -109,10 +109,10 @@ See the package overview for more detail about what's in the library.
 .. toctree::
     :maxdepth: 4
 
-    {% if single -%}
-    {{ single }}
+    {% if single_doc -%}
+    {{ single_doc }}
     {% endif -%}
-    {%if not single -%}
+    {% if not single_doc -%}
     whatsnew
     install
     contributing
@@ -146,10 +146,10 @@ See the package overview for more detail about what's in the library.
     comparison_with_sql
     comparison_with_sas
     {% endif -%}
-    {% if api -%}
+    {% if include_api -%}
     api
     {% endif -%}
-    {%if not single -%}
+    {% if not single_doc -%}
     developer
     internals
     release
