--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,6 @@ env:
     # cd pandas-dev/pandas
     # travis encrypt 'PANDAS_GH_TOKEN=personal_access_token' -r pandas-dev/pandas
     - secure: "EkWLZhbrp/mXJOx38CHjs7BnjXafsqHtwxPQrqWy457VDFWhIY1DMnIR/lOWG+a20Qv52sCsFtiZEmMfUjf0pLGXOqurdxbYBGJ7/ikFLk9yV2rDwiArUlVM9bWFnFxHvdz9zewBH55WurrY4ShZWyV+x2dWjjceWG5VpWeI6sA="
-    - PANDAS_TESTING_MODE: "deprecate"
 
 git:
     # for cloning
@@ -56,7 +55,7 @@ matrix:
         - JOB="3.5_CONDA_BUILD_TEST" TEST_ARGS="--skip-slow --skip-network" CONDA_BUILD_TEST=true
     - dist: trusty
       env:
-        - JOB="3.6" TEST_ARGS="--skip-slow --skip-network" CONDA_FORGE=true COVERAGE=true
+        - JOB="3.6" TEST_ARGS="--skip-slow --skip-network" PANDAS_TESTING_MODE="deprecate" CONDA_FORGE=true COVERAGE=true
     # In allow_failures
     - dist: trusty
       env:
@@ -72,7 +71,7 @@ matrix:
     # In allow_failures
     - dist: trusty
       env:
-        - JOB="3.6_NUMPY_DEV" TEST_ARGS="--skip-slow --skip-network"
+        - JOB="3.6_NUMPY_DEV" TEST_ARGS="--skip-slow --skip-network" PANDAS_TESTING_MODE="deprecate"
     # In allow_failures
     - dist: trusty
       env:
@@ -97,7 +96,7 @@ matrix:
             - xsel
       - dist: trusty
         env:
-          - JOB="3.6_NUMPY_DEV" TEST_ARGS="--skip-slow --skip-network"
+          - JOB="3.6_NUMPY_DEV" TEST_ARGS="--skip-slow --skip-network" PANDAS_TESTING_MODE="deprecate"
       - dist: trusty
         env:
           - JOB="3.6_ASV" ASV=true
