--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ matrix:
     # In allow_failures
     - dist: trusty
       env:
-        - JOB="3.5_CONDA_BUILD_TEST" TEST_ARGS="--skip-slow --skip-network" CONDA_BUILD_TEST=true
+        - JOB="3.5" TEST_ARGS="--skip-slow --skip-network"
     - dist: trusty
       env:
         - JOB="3.6" TEST_ARGS="--skip-slow --skip-network" PANDAS_TESTING_MODE="deprecate" CONDA_FORGE=true COVERAGE=true
@@ -75,15 +75,11 @@ matrix:
     # In allow_failures
     - dist: trusty
       env:
-        - JOB="3.6_ASV" ASV=true
-    # In allow_failures
-    - dist: trusty
-      env:
         - JOB="3.6_DOC" DOC=true
     allow_failures:
       - dist: trusty
         env:
-          - JOB="3.5_CONDA_BUILD_TEST" TEST_ARGS="--skip-slow --skip-network" CONDA_BUILD_TEST=true
+          - JOB="3.5" TEST_ARGS="--skip-slow --skip-network"
       - dist: trusty
         env:
           - JOB="2.7_SLOW" SLOW=true
@@ -97,9 +93,6 @@ matrix:
       - dist: trusty
         env:
           - JOB="3.6_NUMPY_DEV" TEST_ARGS="--skip-slow --skip-network" PANDAS_TESTING_MODE="deprecate"
-      - dist: trusty
-        env:
-          - JOB="3.6_ASV" ASV=true
       - dist: trusty
         env:
           - JOB="3.6_DOC" DOC=true
@@ -135,7 +128,6 @@ script:
   - ci/script_single.sh
   - ci/script_multi.sh
   - ci/lint.sh
-  - ci/asv.sh
   - echo "checking imports"
   - source activate pandas && python ci/check_imports.py
   - echo "script done"
