--- a/pandas/_libs/groupby_helper.pxi.in
+++ b/pandas/_libs/groupby_helper.pxi.in
@@ -795,12 +795,18 @@ def group_cummax_{{name}}(ndarray[{{dest_type2}}, ndim=2] out,
 @cython.boundscheck(False)
 @cython.wraparound(False)
 def group_any(ndarray[int64_t] out,
-              ndarray[int64_t] mask,
+              ndarray values,
               ndarray[int64_t] labels,
               bint skipna):
     cdef:
         Py_ssize_t i, N=len(labels)
         int64_t lab
+        ndarray[int64_t] mask
+
+    if values.dtype is np.object:
+        mask = np.array(bool(x) for x in values).astype(np.int64)
+    else:
+        mask = values.astype(np.bool).astype(np.int64)
 
     with nogil:
         for i in range(N):
