--- a/pandas/_libs/groupby_helper.pxi.in
+++ b/pandas/_libs/groupby_helper.pxi.in
@@ -801,12 +801,15 @@ def group_any(ndarray[int64_t] out,
     cdef:
         Py_ssize_t i, N=len(labels)
         int64_t lab
-        ndarray[int64_t] mask
+        ndarray[int64_t] bool_mask
+        ndarray[uint8_t] isna_mask
 
-    if values.dtype is np.object:
-        mask = np.array(bool(x) for x in values).astype(np.int64)
+    if values.dtype == 'object':
+        bool_mask = np.array([bool(x) for x in values]).astype(np.int64)
+        isna_mask = missing.isnaobj(values).astype(np.uint8)
     else:
-        mask = values.astype(np.bool).astype(np.int64)
+        bool_mask = values.astype(np.bool).astype(np.int64)
+        isna_mask = np.isnan(values).astype(np.uint8)
 
     with nogil:
         for i in range(N):
@@ -814,5 +817,5 @@ def group_any(ndarray[int64_t] out,
             if lab < 0:
                 continue
 
-            if mask[i]:
+            if bool_mask[i] and not (skipna and isna_mask[i]):
                 out[lab] = 1
