--- a/doc/source/index.rst.template
+++ b/doc/source/index.rst.template
@@ -152,5 +152,6 @@ See the package overview for more detail about what's in the library.
     {% if not single_doc -%}
     developer
     internals
+    extending
     release
     {% endif -%}
