--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -15,6 +15,7 @@ tasks:
       python -m pip install -ve . --no-build-isolation --config-settings editable-verbose=true
       pre-commit install
       echo "✨ Pre-build complete! You can close this terminal ✨ "
+    command: python -m pip install -ve . --no-build-isolation --config-settings editable-verbose=true
 
 # --------------------------------------------------------
 # exposing ports for liveserve
