--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -15,6 +15,8 @@ tasks:
       git fetch --tags
       python -m pip install -ve . --no-build-isolation --config-settings editable-verbose=true
       pre-commit install
+    command: |
+      python -m pip install -ve . --no-build-isolation --config-settings editable-verbose=true
       echo "✨ Pre-build complete! You can close this terminal ✨ "
 
 # --------------------------------------------------------
